2015-05-16  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Experimental support of application/ms-tnef entity.
	* mime-edit.el (mime-content-types): Add entries for ms-tnef
	subtype.
	(mime-file-types): Add entry for winmail.dat.

	* mime-tnef.el: New file.

	* semi-setup.el: Define preview condition for application/ms-ntef
	entity.

	* SEMI-ELS (semi-modules-to-compile): Add mime-tnef.el.

2015-05-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-pgp-get-signers): Search epg-key from
	From: field's mail address with exact match.

2015-05-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-make-encrypt-recipient-header): Car of
	return vale is now expanded list of mail addresses and key-id.
	Enclose mail addresses with '<' and '>'.
	Cf. https://github.com/wanderlust/semi/issues/9
	(mime-edit-encrypt-pgp-mime): Adjusted.

2015-05-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-make-encrypt-recipient-header): Handle
	multiple same name fields.

2015-05-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Fix for CCL unusable environments.
	* mime-edit.el (mime-edit-normalize-eol-crlf): Define for only CCL
	usable environment.
	(mime-edit-sign-pgp-mime): Use elisp routine for CCL unusable
	environments.

2015-02-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-make-encrypt-recipient-header): Returns
	cons of recipients list and header string.  Pick recipients more
	strictly.
	(mime-edit-encrypt-pgp-mime, mime-edit-encrypt-smime): Adjusted.

2014-11-09  Erik Hetzner <egh@e6h.org>

	* semi-pkg.el: New file.

2014-11-09  Erik Hetzner <egh@e6h.org>

	* mime-ui-en.texi: Fix headers and missing cross-references.

	* mime-ui-ja.texi: Likewise.

	* mime-ui-en.sgml: Removed.

	* mime-ui-ja.sgml: Removed.

2014-10-26  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-verify-application/*-signature): Set
	epa-info-buffer's buffer to the current buffer when the buffer is
	displyed.